feat: nearby merchant endpoint according to test